# superconstraints

./: LICENSE  README.markdown  superconstraints.cabal
src/Data/Constraint/: Super.hs
