name:          superconstraints
category:      Constraints
version:       0.0.1
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.10
author:        Ryan Trinkle
maintainer:    Ryan Trinkle <ryan.trinkle@gmail.com
stability:     experimental
homepage:      http://github.com/ryantrinkle/superconstraints
bug-reports:   http://github.com/ryantrinkle/superconstraints/issues
copyright:     Copyright (C) 2013 Ryan Trinkle
synopsis:      Access an instance's constraints
description:   Constraint manipulation
build-type:    Simple
extra-source-files: README.markdown

source-repository head
  type: git
  location: git://github.com/ryantrinkle/superconstraints.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  other-extensions
    TypeFamilies,
    ConstraintKinds,
    Rank2Types,
    TypeOperators,
    ScopedTypeVariables,
    GADTs,
    TemplateHaskell,
    LambdaCase


  build-depends: base
               , constraints
               , template-haskell
               , haskell-src-meta
               , mtl
               , containers
               , type-eq
               , tagged
  exposed-modules:
    Data.Constraint.Super

  ghc-options: -Wall
